# rustcord

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  TEST_COVERAGE_STRATEGY.md  Taskfile.yaml  create_table.sql  example.json  pyproject.toml  run.sh
.cargo/: config.toml
.github/workflows/: cicd.yml  cron.yml  images.yml  insert.yml  migration.yml  pr.yml  spoiler-sync.yml  test-coverage.yml
.run/: Run Bot.run.xml  Run Spoilers.run.xml  Run Sync Bulk.run.xml  Run Sync Spoilers.run.xml
.taskfiles/: bot.Taskfile.yaml  db.Taskfile.yaml  docker.Taskfile.yaml  k8.Taskfile.yaml  py.Taskfile.yaml  rust.Taskfile.yaml
api/: Dockerfile
api/src/: main.rs
benches/: jw_bench.rs
bot/: Dockerfile
bot/src/: main.rs
bot/src/domain/: search.rs
bot/src/domain/dto/: card.rs
docs/: PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
docs/superpowers/plans/: 2026-06-16-scryfall-card-to-storage-records.md
k8s/: db-management.yaml  discord-bot.yaml  postgres.yaml  redis.yaml
migrations/: 20260622145205_baseline.down.sql  20260622145205_baseline.up.sql  20260622152517_fix-column-types.down.sql  20260622152517_fix-column-types.up.sql
scripts/: main.py
sql/: create_tables.sql
src/: commands.rs  db.rs  emoji.rs  game.rs  help.rs  lib.rs  main.rs  mtg.rs  redis.rs  utils.rs
src/adapters/: mod.rs
src/adapters/cache/: mod.rs  redis.rs
src/adapters/card_store/: mod.rs
src/adapters/image_store/: file_system.rs  mod.rs
src/adapters/inbound/: mod.rs
src/api/clients/: mod.rs
src/app/: mod.rs  search.rs
src/cache/: mod.rs  redis.rs
src/card_store/: mod.rs
src/card_store/postgres/: mod.rs  queries.rs
src/clients/: discord.rs  mod.rs
src/commands/: give_up.rs  guess.rs  help.rs  mod.rs  play.rs  search.rs
src/dbs/: mod.rs  redis.rs
src/dbs/psql/: mod.rs  queries.rs
src/domain/: app.rs  card.rs  mod.rs  query.rs  search.rs  set.rs
src/domain/dto/: card.rs  mod.rs  search_result.rs
src/domain/functions/: help.rs  mod.rs
src/domain/game/: give_up.rs  guess.rs  help.rs  mod.rs  play.rs
src/domain/tem_commands/: give_up.rs  guess.rs  help.rs  play.rs  search.rs
src/domain/utils/: fuzzy.rs  mod.rs  mutex.rs
src/game/: mod.rs  mutex.rs  parse_message.rs  state.rs
src/image_store/: file_system.rs  mod.rs
src/mtg/: card.rs  db.rs  images.rs  mod.rs  response.rs  search.rs
src/mtg/db/: queries.rs
src/ports/clients/: mod.rs
src/ports/inbound/: client.rs
src/ports/outbound/: cache.rs  card_store.rs  image_store.rs
src/query/: mod.rs
src/spi/cache/: mod.rs  redis.rs
src/spi/card_store/: mod.rs
src/spi/image_store/: file_system.rs  mod.rs
src/temp_store/: mod.rs  redis.rs
src/utils/: colours.rs  emoji.rs  fuzzy.rs  help.rs  mod.rs  mutex.rs  mutex_by_name.rs  parse.rs
(+51 files in other folders)
