[workspace]
members = [
    "packages/bot",
    "packages/contracts",
    "packages/fuzzy",
    "packages/named_lock",
    "packages/sync",
]
resolver = "2"

[workspace.dependencies]
contracts = { path = "packages/contracts" }
fuzzy = { path = "packages/fuzzy" }
named_lock = { path = "packages/named_lock" }
