[workspace]
members = [
    "packages/bot",
    "packages/contracts",
    "packages/fuzzy",
    "packages/named_lock",
    "packages/sync",
]
resolver = "2"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
implicit_hasher = "allow"

[workspace.dependencies]
contracts = { path = "packages/contracts" }
fuzzy = { path = "packages/fuzzy" }
named_lock = { path = "packages/named_lock" }
